package com.fges.todoapp;


public class ErreurManager {

    public static void printError(String message) {
        System.err.println(message);
    }
}
